src/test/deca/codegen/valid/class/field/field_decl_class.deca
// Description:
//    Tests de débordement de la pile
//
// Resultats:
//   ima_output: socrate
//

class Socrate{
	void quiSuisJe(){
		System.out.print("socrate");
	}
}

class Platon{
	Socrate s = new Socrate();
	void afficheSocrate(){
		s.quiSuisJe();
	}
}
{
    Platon p = new Platon();
    p.afficheSocrate();
}
