src/test/deca/codegen/invalid/class/overflow/heap_overflow.deca
// Description:
//    Tests de débordement du tas
//
// Resultats:
//   ima_output: stack overflow
//

class Platon {
    Platon p = new Platon();
}

{
    Platon p = new Platon();
}

